[tool.poetry]
name = "self-dining-backend"
version = "0.1.0"
description = ""
authors = ["2044smile <2044smile@naver.com>"]
readme = "README.md"
packages = [{include = "self_dining_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pytube = "^12.1.3"
ipykernel = "^6.22.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
