[tool.poetry]
name = "cancook-backend"
version = "0.1.0"
description = ""
authors = ["2044smile <2044smile@naver.com>"]
readme = "README.md"
packages = [{include = "self_dining_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
pytube = "^12.1.3"
ipykernel = "^6.22.0"
jupyter = "^1.0.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
google-api-python-client = "^2.86.0"
oauth2client = "^4.1.3"
pandas = "^2.0.0"
django-environ = "^0.10.0"
discord-webhook = "^1.1.0"
sqlalchemy= "^1.4.48"
sshtunnel = "^0.4.0"
slack-sdk = "^3.21.3"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
drf-yasg = "^1.21.6"
django-extensions = "^3.2.3"
django-cors-headers = "^4.1.0"
django-filter = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
